rentACar/mdapi/objects/Car__c.object
<CustomObject>
    <label>Car</label>
    <nameField>
        <label>Car Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cars</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Available_For_Rent__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Available For Rent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Build_Year__c</fullName>
        <label>Build Year</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Car_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Car Type</label>
        <referenceTo>Car_Type__c</referenceTo>
        <relationshipLabel>Cars</relationshipLabel>
        <relationshipName>Cars</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cars</relationshipLabel>
        <relationshipName>Cars</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the car like new tyre, good mileage</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <description>Mileage per liter</description>
        <label>Mileage</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Per_Day_Rent__c</fullName>
        <description>Per day rent of the car</description>
        <label>Per Day Rent</label>
        <precision>7</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Build_Year__c</columns>
        <columns>Car_Type__c</columns>
        <columns>Contact__c</columns>
        <columns>Geolocation__Latitude__s</columns>
        <columns>Geolocation__Longitude__s</columns>
        <columns>Mileage__c</columns>
        <columns>Per_Day_Rent__c</columns>
        <columns>Picture__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>